chore: let it called by manually
Signed-off-by: pohanhuangtw <pohan.huang@suse.com>

--- a/.github/workflows/bump-neuvector.yaml
+++ b/.github/workflows/bump-neuvector.yaml
@@ -1,6 +1,6 @@
 name: Update neuvector dependency
 on:
-  workflow_call:
+  workflow_dispatch:
 jobs:
   update-neuvector-dependency:
     name: Update neuvector dependency
