Feat/add update cli to bump nv (#4)
* chore: let it called by manually

Signed-off-by: pohanhuangtw <pohan.huang@suse.com>

* update

* merge command

---------

Signed-off-by: pohanhuangtw <pohan.huang@suse.com>

--- a/updatecli/updatecli.bump-neuvector.d/bump-neuvector.yaml
+++ b/updatecli/updatecli.bump-neuvector.d/bump-neuvector.yaml
@@ -25,23 +25,10 @@ targets:
     scmid: scanner
     kind: shell
     spec:
-      command: go get github.com/neuvector/neuvector@main
-  tidyGoMod:
-    name: Tidy go modules
-    scmid: scanner
-    kind: shell
-    spec:
-      command: go mod tidy
-    dependson:
-      - updateDependency
-  vendorDeps:
-    name: Vendor dependencies
-    scmid: scanner
-    kind: shell
-    spec:
-      command: go mod vendor
-    dependson:
-      - tidyGoMod
+      command: |
+        go get github.com/neuvector/neuvector@main
+        go mod tidy
+        go mod vendor
 
 actions:
   default:
