ensure it create

--- a/.github/workflows/bump-neuvector.yaml
+++ b/.github/workflows/bump-neuvector.yaml
@@ -1,5 +1,7 @@
 name: Update neuvector dependency
 on:
+  schedule:
+    - cron: '0 2 * * *' # Run daily at 2 AM UTC
   workflow_dispatch:
 jobs:
   update-neuvector-dependency:
