feat: updatecli to bump sigstore-interface
Signed-off-by: pohanhuangtw <pohan.huang@suse.com>

--- a/updatecli/values.yaml
+++ b/updatecli/values.yaml
@@ -2,6 +2,6 @@ github:
   owner: "UPDATECLI_GITHUB_OWNER"
   token: "UPDATECLI_GITHUB_TOKEN"
   branch: "main"
-  author: "SBOMscanner bot"
+  author: "neuvector bot"
   user: "UPDATECLI_GITHUB_OWNER"
-  email: "sbomscanner-bot@users.noreply.github.com"
+  email: "neuvector-bot@users.noreply.github.com"
