fix: updatecli bump sigstore bug (#13)
Signed-off-by: pohanhuangtw <pohan.huang@suse.com>

--- a/updatecli/updatecli.bump-sigstore.d/bump-sigstore.yaml
+++ b/updatecli/updatecli.bump-sigstore.d/bump-sigstore.yaml
@@ -18,7 +18,6 @@ scms:
         hidecredit: true
         footers: "Signed-off-by: neuvector bot <neuvector-bot@users.noreply.github.com>"
 
-
 sources:
   sigstoreLatestCommit:
     name: Get latest sigstore-interface commit
@@ -36,9 +35,8 @@ targets:
     kind: file
     spec:
       file: package/Dockerfile
-      line: 3
       matchpattern: 'ARG SIGSTORE_VERSION=.*'
-      replacepattern: 'ARG SIGSTORE_VERSION={{ .source.sigstoreLatestCommit.output }}'
+      replacepattern: 'ARG SIGSTORE_VERSION={{ source "sigstoreLatestCommit" }}'
 
 actions:
   default:
@@ -50,8 +48,7 @@ actions:
         This PR updates sigstore-interface to the latest commit from the main branch.
 
         Changes:
-        - Updated sigstore-interface to latest commit: {{ .source.sigstoreLatestCommit.output }}
+        - Updated sigstore-interface to latest commit: {{ source "sigstoreLatestCommit" }}
       labels:
         - dependencies
       automerge: false
-
